rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__all_base_measures_count_distinct_full_match.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: sql
---
SELECT "orders__status" "orders__status", "orders__city" "orders__city", sum("orders__unique_status_count") "orders__unique_status_count" 
FROM  orders__all_base_measures_rollup  AS "orders__all_base_measures_rollup"
GROUP BY 1, 2
ORDER BY  3  DESC
