rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__base_and_calculated_measure_parital_match.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: sql
---
SELECT "orders__status" "orders__status", sum("orders__total_amount") / sum("orders__count") "orders__amount_per_count" 
FROM  orders__base_and_calculated_measure_rollup  AS "orders__base_and_calculated_measure_rollup"
GROUP BY 1
ORDER BY  2  DESC
