rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__base_and_calculated_measure_parital_match_pg_result.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: result
---
orders__status | orders__amount_per_count
---------------+-------------------------
completed      | 185.0000000000000000    
pending        | 146.2500000000000000    
cancelled      | 25.0000000000000000
