rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__basic_pre_agg_sql.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: sql
---
SELECT "visitors__source" "visitors__source", sum("visitors__count") "visitors__count" 
FROM  visitors__daily_rollup  AS "visitors__daily_rollup"
GROUP BY 1
ORDER BY  2  DESC
