rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__basic_pre_agg_sql_pg_result.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: result
---
visitors__source | visitors__count
-----------------+----------------
google           | 5              
organic          | 2              
twitter          | 2              
NULL             | 1
