rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__custom_granularity_non_additive_full_match_pg_result.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: result
---
orders__status | orders__created_at_half_year | orders__avg_amount  
---------------+------------------------------+---------------------
completed      | 2025-01-01 00:00:00          | 185.0000000000000000
pending        | 2025-01-01 00:00:00          | 146.2500000000000000
cancelled      | 2025-01-01 00:00:00          | 25.0000000000000000
