rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__pre_aggregation_sql_generation__custom_granularity_non_strict_self_match.snap
---
source: cubesqlplanner/src/tests/pre_aggregation_sql_generation.rs
expression: sql
---
SELECT ('2024-01-01T00:00:00.000' ::timestamp + INTERVAL '6 month' * FLOOR(EXTRACT(EPOCH FROM ("orders__created_at_half_year" - '2024-01-01T00:00:00.000'::timestamp)) / EXTRACT(EPOCH FROM INTERVAL '6 month'))) "orders__created_at_half_year", sum("orders__count") "orders__count" 
FROM  orders__custom_half_year_non_strict  AS "orders__custom_half_year_non_strict"
GROUP BY 1
ORDER BY  1  ASC
